; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcclibs/libcpp/extr_charset.c_convert_utf16_utf8.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcclibs/libcpp/extr_charset.c_convert_utf16_utf8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cpp_strbuf = type { i32 }

@one_utf16_to_utf8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i64, %struct._cpp_strbuf*)* @convert_utf16_utf8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_utf16_utf8(i32 %0, i32* %1, i64 %2, %struct._cpp_strbuf* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct._cpp_strbuf*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store %struct._cpp_strbuf* %3, %struct._cpp_strbuf** %8, align 8
  %9 = load i32, i32* @one_utf16_to_utf8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load %struct._cpp_strbuf*, %struct._cpp_strbuf** %8, align 8
  %14 = call i32 @conversion_loop(i32 %9, i32 %10, i32* %11, i64 %12, %struct._cpp_strbuf* %13)
  ret i32 %14
}

declare dso_local i32 @conversion_loop(i32, i32, i32*, i64, %struct._cpp_strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
